--- a/toc.htm
+++ b/toc.htm
@@ -1,4 +1,4 @@
-<li><a href="initial-steps.htm">Initializing a Web Site</a></li>
+﻿<li><a href="initial-steps.htm">Initializing a Web Site</a></li>
 <li><a href="page-templates.htm">Page Templates</a></li>
 <li><a href="page-component.htm">Page Component</a></li>
 <li><a href="header-2.htm">Header</a></li>
@@ -10,3 +10,5 @@
 <li><a href="loader-4/loader-4.htm">Recursive Fragment Loader</a></li>
 <li><a href="counter.htm">Counter</a></li>
 <li><a href="improvements.htm">Improvements</a></li>
+<li><a href="table-borders/flat-borders.htm">Flat Table Borders</a></li>
+<li><a href="sticky-table-headers/sticky-headers.htm">Sticky Table Headers</a></li>
