sticky table headers module implementation

--- a/sticky-table-headers/sticky-headers.htm
+++ b/sticky-table-headers/sticky-headers.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-US"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -253,9 +253,20 @@ function initPage ( ) {
 
 <!-- h2 --></div>
 
-<h2 cbc>Conclusion</h2><div>
+<h2 cbc>Implementation as Module</h2><div>
 
-<p>The module is implemented in the <a href="/inc/collapsible/table-rowgroups-1.js">inc/collapsible/table-rowgroups-1.js</a> and <a href="inc/collapsible/table-rowgroups-1.css">inc/collapsible/table-rowgroups-1.css</a> files.</p>
+<p>The module is implemented in these files:</p>
+<ul>
+<li><a href="/inc/sticky-table-headers-1.css">sticky-table-headers-1.css</a></li>
+<li><a href="/inc/collapsible/table-rowgroups-1.css">collapsible/table-rowgroups-1.css</a></li>
+<li><a href="/inc/colors.css">colors.css</a></li>
+<li><a href="/inc/collapsible/table-rowgroups-1.js">collapsible/table-rowgroups-1.js</a></li>
+</ul>
+
+
+<figcaption class="example">Collapsible Row-Groups as module</figcaption>
+<iframe src="sticky-headers-05.htm"></iframe>
+
 
 <!-- h2 --></div>
 
