Html file structure adapted to template empty.htm as of 2022-01-17

--- a/collapsible-4/collapsible-4.htm
+++ b/collapsible-4/collapsible-4.htm
@@ -16,7 +16,7 @@
 
 <title>Collapsible Blocks Version 4</title>
 
-</head><body><div id="page-header"></div><div id="main-toolbar"><div id="content">
+</head><body><header id="page-header"></header><div id="main-toolbar"></div><main id="page-content">
 
 <h1>Collapsible Blocks Version 4</h1>
 
@@ -444,4 +444,4 @@ function clickEventHandler ( ) {
 
 <!-- Scroll Element into View --></div>
 
-</div><script type="module" src="/inc/page.js" ></script></body></html>
+</div></main><script type="module" src="/inc/page.js" ></script></body></html>
