--- a/table-borders/flat-borders.htm
+++ b/table-borders/flat-borders.htm
@@ -2,7 +2,7 @@
 <html lang="en-US"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="template-info" file-name="empty.htm"version="2022-01-17" editor-name="USP" />
+<meta name="template-info" file-name="empty.htm" version="2022-01-17" editor="usp" />
 <meta name="author" content="USP" />
 <meta name="creation-date" content="2022-01-23" />
 <meta name="editor" content="USP" />
