--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="en-US"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="template-info" file-name="empty.htm" change-date="2021-08-23" editor-name="usp" />
+<meta name="template-info" file-name="empty.htm" version="2022-01-17" editor="usp" />
 <meta name="author" content="usp" />
 <meta name="creation-date" content="2021-08-02" />
 <meta name="editor" content="usp" />
@@ -16,7 +16,7 @@
 
 <title>Bassmati on Code - Web Design Toolbox</title>
  
-</head><body><div id="page-header"></div><div id="main-toolbar"></div><div id="content">
+</head><body><header id="page-header"></header><div id="main-toolbar"></div><main id="page-content">
 
 <h1>The Web Design Toolbox</h1>
 
@@ -206,4 +206,4 @@
 
 <!-- Components --></div>
 
-</div><script type="module" src="/inc/page.js" ></script></body></html>
+</main><script type="module" src="/inc/page.js" ></script></body></html>
