--- a/initial-steps.htm
+++ b/initial-steps.htm
@@ -2,7 +2,7 @@
 <html lang="en-US"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="template-info" file-name="empty.htm" change-date="2021-08-23" editor-name="usp" />
+<meta name="template-info" file-name="empty.htm" version="2022-01-17" editor="usp" />
 <meta name="author" content="usp" />
 <meta name="creation-date" content="2021-08-04" />
 <meta name="editor" content="usp" />
@@ -16,7 +16,7 @@
  
 <title>Web Design Toolbox - First Steps to Create a Web Site</title>
 
-</head><body><div id="page-header"></div><div id="main-toolbar"><div id="content">
+</head><body><header id="page-header"></header><div id="main-toolbar"></div><main id="page-content">
 
 <h1>Initial Steps to Set Up a Web Site</h1>
 
@@ -63,7 +63,7 @@
 &lt;!DOCTYPE html&gt;&lt;html lang="en-US"&gt;<hi>&lt;head&gt;</hi>
 &lt;meta charset="utf-8"&gt;
 &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-&lt;meta name="template-info" file-name="empty.htm" version="2021-08-02" editor-name="usp" /&gt;
+&lt;meta name="template-info" file-name="empty.htm" version="2022-01-17" editor="usp" /&gt;
 &lt;meta name="<hi>author</hi>" content="usp" /&gt;
 &lt;meta name="<hi>creation-date</hi>" content="2021-08-04" /&gt;
 &lt;meta name="<hi>editor</hi>" content="usp" /&gt;
@@ -119,5 +119,5 @@
 
 <!-- Deployment to a Production Server --></div>
 
-</div><script type="module" src="/inc/page.js" ></script>
+</main><script type="module" src="/inc/page.js" ></script>
 </body></html>
