--- a/loader-4/loader-4.htm
+++ b/loader-4/loader-4.htm
@@ -16,7 +16,7 @@
 
 <link rel="stylesheet" href="/inc/page.css" />
  
-</head><body><div id="page-header"></div><div id="main-toolbar"><div id="content">
+</head><body><header id="page-header"></header><div id="main-toolbar"></div><main id="page-content">
 
 <h1>Recursive Fragment Loader</h1>
 
@@ -327,4 +327,4 @@ export function loadFragments ( container = document.body ) {
 
 <!-- Support for Partitioned Website Projects --></div>
 
-</div><script type="module" src="/inc/page.js"></script></body></html>
+</main><script type="module" src="/inc/page.js"></script></body></html>
