--- a/toolbar-2.htm
+++ b/toolbar-2.htm
@@ -2,7 +2,7 @@
 <html lang="en-US"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="template-info" file-name="empty.htm"version="2021-08-23" editor-name="usp" />
+<meta name="template-info" file-name="empty.htm" version="2022-01-17" editor="usp" />
 <meta name="author" content="usp" />
 <meta name="creation-date" content="2021-08-05" />
 <meta name="editor" content="usp" />
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href="/inc/page.css" />
  
-</head><body><div id="page-header"></div><div id="main-toolbar"><div id="content">
+</head><body><header id="page-header"></header><div id="main-toolbar"></div><main id="page-content">
 
 <h1>The Toolbar Component</h1>
 
@@ -245,4 +245,4 @@ const circledPlusMinus = "<ellipse cx='0' cy='0' rx='45' ry='45' /><path d='M -2
 
 <!-- Script Code --></div>
 
-</div><script type="module" src="/inc/page.js" ></script></body></html>
+</main><script type="module" src="/inc/page.js" ></script></body></html>
